# hermes-bot

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  README.md.backup  SECURITY.md  config.toml.example  deny.toml  slack-manifest.json
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs  session.rs  sync.rs  util.rs
src/agent/: claude.rs  mod.rs  protocol.rs
src/slack/: api.rs  formatting.rs  handlers.rs  mod.rs
tests/: integration_test.rs
tests/common/: mod.rs
